# mini-games

./: .gitignore  LICENSE.md  README.md  index.html  style.css
belling-cat/: game_design.md  index.html  plan.md  style.css
belling-cat/src/: action.js  director.js  main.js  narrative-renderer.js  narrative.js  stories.js
futoshiki/: 9_x_9_futoshiki_sudoku_rust_wasm_implementation_plan.md  index.html  main.js  style.css
futoshiki/core/: Cargo.toml  output.txt
futoshiki/core/src/: futoshiki.rs  generator.rs  lib.rs  solver.rs  sudoku.rs
futoshiki/wasm/: futoshiki_core.d.ts  futoshiki_core.js  futoshiki_core_bg.wasm  futoshiki_core_bg.wasm.d.ts  package.json
gravity/: index.html  style.css
gravity/src/: game.js  levels.js  renderer.js
hex-connect/: game.js  index.html  style.css
hex-defense/: README.md  game.js  index.html  style.css
infinite-dice/: README.md  game.js  index.html  style.css
infinite-dice/wasm/: infinite_dice_mapgen.d.ts  infinite_dice_mapgen.js  infinite_dice_mapgen_bg.wasm  infinite_dice_mapgen_bg.wasm.d.ts  package.json
infinite-dice/wasm-mapgen/: Cargo.toml  build.bat
infinite-dice/wasm-mapgen/src/: generator.rs  lib.rs  types.rs
killing-commendatore/: design_doc.md  design_review.md  implementation_plan.md  index.html  migration_plan.md  style.css  task.md
match3dice/: index.html
match3dice/match3dice_wasm/: Cargo.toml  build_log.txt
match3dice/match3dice_wasm/src/: lib.rs
taoyuanjing/: index.html  style.css  게임 기획서 - 도원경 4fc4d54dfe144c56b8fbc722effbaeeb.md
tile-push/: app.js  game_design.md  index.html  style.css
(+22 files in other folders)
