[package]
name = "futoshiki-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4" # Useful for bitmasks in solver
serde-wasm-bindgen = "0.6.5"
rand = "0.8"
